// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`asm coverage dictionary 1`] = `
"Coverage Summary:
Lines: 4/7 (57.14%)
Total Gas: 301
Total Hits: 5

Instruction Stats:
  DICTIGETJMPZ  | 226 gas | 1 hits |  226 avg gas |  75.08%
  DICTPUSHCONST |  34 gas | 1 hits |   34 avg gas |  11.30%
  INC           |  23 gas | 2 hits | 11.5 avg gas |   7.64%
  PUSHINT_4     |  18 gas | 1 hits |   18 avg gas |   5.98%

Annotated Code:
 1 ✓ | DICTPUSHCONST 19 [                       | gas:34    | hits:1
 2   |     0 => {                               |           |
 3 ✓ |         PUSHINT_4 10                     | gas:18    | hits:1
 4 ✓ |         INC                              | gas:23    | hits:2
 5   |     }                                    |           |
 6   |     2 => {                               |           |
 7 ✗ |         PUSHINT_4 5                      |           |
 8 ✗ |         INC                              |           |
 9   |     }                                    |           |
10   | ]                                        |           |
11 ✓ | DICTIGETJMPZ                             | gas:226   | hits:1
12 ✗ | THROWARG 11                              |           |
13   |                                          |           |"
`;

exports[`asm coverage dictionary 2 1`] = `
"Coverage Summary:
Lines: 4/7 (57.14%)
Total Gas: 301
Total Hits: 5

Instruction Stats:
  DICTIGETJMPZ  | 226 gas | 1 hits |  226 avg gas |  75.08%
  DICTPUSHCONST |  34 gas | 1 hits |   34 avg gas |  11.30%
  INC           |  23 gas | 2 hits | 11.5 avg gas |   7.64%
  PUSHINT_4     |  18 gas | 1 hits |   18 avg gas |   5.98%

Annotated Code:
 1 ✓ | DICTPUSHCONST 19 [                       | gas:34    | hits:1
 2   |     0 => {                               |           |
 3 ✗ |         PUSHINT_4 10                     |           |
 4 ✗ |         INC                              |           |
 5   |     }                                    |           |
 6   |     2 => {                               |           |
 7 ✓ |         PUSHINT_4 5                      | gas:18    | hits:1
 8 ✓ |         INC                              | gas:23    | hits:2
 9   |     }                                    |           |
10   | ]                                        |           |
11 ✓ | DICTIGETJMPZ                             | gas:226   | hits:1
12 ✗ | THROWARG 11                              |           |
13   |                                          |           |"
`;

exports[`asm coverage dictionary with same code methods 1`] = `
"Coverage Summary:
Lines: 6/7 (85.71%)
Total Gas: 342
Total Hits: 8

Instruction Stats:
  DICTIGETJMPZ  | 226 gas | 1 hits |  226 avg gas |  66.08%
  INC           |  46 gas | 4 hits | 11.5 avg gas |  13.45%
  PUSHINT_4     |  36 gas | 2 hits |   18 avg gas |  10.53%
  DICTPUSHCONST |  34 gas | 1 hits |   34 avg gas |   9.94%

Annotated Code:
 1 ✓ | DICTPUSHCONST 19 [                       | gas:34    | hits:1
 2   |     0 => {                               |           |
 3 ✓ |         PUSHINT_4 10                     | gas:18    | hits:1
 4 ✓ |         INC                              | gas:23    | hits:2
 5   |     }                                    |           |
 6   |     2 => {                               |           |
 7 ✓ |         PUSHINT_4 10                     | gas:18    | hits:1
 8 ✓ |         INC                              | gas:23    | hits:2
 9   |     }                                    |           |
10   | ]                                        |           |
11 ✓ | DICTIGETJMPZ                             | gas:226   | hits:1
12 ✗ | THROWARG 11                              |           |
13   |                                          |           |"
`;

exports[`asm coverage if ret 1`] = `
"Coverage Summary:
Lines: 3/6 (50.00%)
Total Gas: 54
Total Hits: 3

Instruction Stats:
  DROP      | 18 gas | 1 hits | 18 avg gas |  33.33%
  PUSHINT_4 | 18 gas | 1 hits | 18 avg gas |  33.33%
  IFRET     | 18 gas | 1 hits | 18 avg gas |  33.33%

Annotated Code:
1 ✓ | DROP                                     | gas:18    | hits:1
2 ✓ | PUSHINT_4 -1                             | gas:18    | hits:1
3 ✓ | IFRET                                    | gas:18    | hits:1
4 ✗ | PUSHINT_4 1                              |           |
5 ✗ | PUSHINT_4 2                              |           |
6 ✗ | ADD                                      |           |
7   |                                          |           |"
`;

exports[`asm coverage nested try with rethrow 1`] = `
"Coverage Summary:
Lines: 9/9 (100.00%)
Total Gas: 344
Total Hits: 11

Instruction Stats:
  PUSHCONT  | 104 gas | 4 hits |   26 avg gas |  30.23%
  THROW     |  84 gas | 1 hits |   84 avg gas |  24.42%
  THROWANY  |  76 gas | 1 hits |   76 avg gas |  22.09%
  TRY       |  52 gas | 2 hits |   26 avg gas |  15.12%
  PUSHINT_4 |  28 gas | 3 hits | 9.33 avg gas |   8.14%

Annotated Code:
 1 ✓ | PUSHCONT {                               | gas:26    | hits:1
 2 ✓ |     PUSHCONT {                           | gas:26    | hits:1
 3 ✓ |         THROW 10                         | gas:84    | hits:1
 4   |     }                                    |           |
 5 ✓ |     PUSHCONT {                           | gas:26    | hits:1
 6 ✓ |         THROWANY                         | gas:76    | hits:1
 7   |     }                                    |           |
 8 ✓ |     TRY                                  | gas:26    | hits:1
 9   | }                                        |           |
10 ✓ | PUSHCONT {                               | gas:26    | hits:1
11 ✓ |     PUSHINT_4 2                          | gas:28    | hits:3
12   | }                                        |           |
13 ✓ | TRY                                      | gas:26    | hits:1
14   |                                          |           |"
`;

exports[`asm coverage simple if 1`] = `
"Coverage Summary:
Lines: 4/7 (57.14%)
Total Gas: 85
Total Hits: 5

Instruction Stats:
  PUSHINT_4 | 36 gas | 2 hits |   18 avg gas |  42.35%
  PUSHCONT  | 26 gas | 1 hits |   26 avg gas |  30.59%
  IF        | 23 gas | 2 hits | 11.5 avg gas |  27.06%

Annotated Code:
1 ✓ | PUSHINT_4 0                              | gas:18    | hits:1
2 ✓ | PUSHINT_4 0                              | gas:18    | hits:1
3 ✓ | PUSHCONT {                               | gas:26    | hits:1
4 ✗ |     INC                                  |           |
5 ✗ |     INC                                  |           |
6 ✗ |     INC                                  |           |
7   | }                                        |           |
8 ✓ | IF                                       | gas:23    | hits:2
9   |                                          |           |"
`;

exports[`asm coverage simple if-else 1`] = `
"Coverage Summary:
Lines: 6/7 (85.71%)
Total Gas: 134
Total Hits: 8

Instruction Stats:
  PUSHCONT  | 52 gas | 2 hits |   26 avg gas |  38.81%
  PUSHINT_4 | 36 gas | 2 hits |   18 avg gas |  26.87%
  INC       | 28 gas | 3 hits | 9.33 avg gas |  20.90%
  IFELSE    | 18 gas | 1 hits |   18 avg gas |  13.43%

Annotated Code:
 1 ✓ | PUSHINT_4 0                              | gas:18    | hits:1
 2 ✓ | PUSHINT_4 -1                             | gas:18    | hits:1
 3 ✓ | PUSHCONT {                               | gas:26    | hits:1
 4 ✓ |     INC                                  | gas:28    | hits:3
 5   | }                                        |           |
 6 ✓ | PUSHCONT {                               | gas:26    | hits:1
 7 ✗ |     DEC                                  |           |
 8   | }                                        |           |
 9 ✓ | IFELSE                                   | gas:18    | hits:1
10   |                                          |           |"
`;

exports[`asm coverage try with throw 1`] = `
"Coverage Summary:
Lines: 6/6 (100.00%)
Total Gas: 208
Total Hits: 8

Instruction Stats:
  THROW     | 84 gas | 1 hits |   84 avg gas |  40.38%
  PUSHCONT  | 52 gas | 2 hits |   26 avg gas |  25.00%
  SUB       | 28 gas | 3 hits | 9.33 avg gas |  13.46%
  TRY       | 26 gas | 1 hits |   26 avg gas |  12.50%
  PUSHINT_4 | 18 gas | 1 hits |   18 avg gas |   8.65%

Annotated Code:
1 ✓ | PUSHINT_4 10                             | gas:18    | hits:1
2 ✓ | PUSHCONT {                               | gas:26    | hits:1
3 ✓ |     THROW 10                             | gas:84    | hits:1
4   | }                                        |           |
5 ✓ | PUSHCONT {                               | gas:26    | hits:1
6 ✓ |     SUB                                  | gas:28    | hits:3
7   | }                                        |           |
8 ✓ | TRY                                      | gas:26    | hits:1
9   |                                          |           |"
`;

exports[`asm coverage try without throw 1`] = `
"Coverage Summary:
Lines: 5/6 (83.33%)
Total Gas: 124
Total Hits: 7

Instruction Stats:
  PUSHCONT  | 52 gas | 2 hits |   26 avg gas |  41.94%
  INC       | 28 gas | 3 hits | 9.33 avg gas |  22.58%
  TRY       | 26 gas | 1 hits |   26 avg gas |  20.97%
  PUSHINT_4 | 18 gas | 1 hits |   18 avg gas |  14.52%

Annotated Code:
1 ✓ | PUSHINT_4 10                             | gas:18    | hits:1
2 ✓ | PUSHCONT {                               | gas:26    | hits:1
3 ✓ |     INC                                  | gas:28    | hits:3
4   | }                                        |           |
5 ✓ | PUSHCONT {                               | gas:26    | hits:1
6 ✗ |     DEC                                  |           |
7   | }                                        |           |
8 ✓ | TRY                                      | gas:26    | hits:1
9   |                                          |           |"
`;

exports[`asm coverage while loop with break 1`] = `
"Coverage Summary:
Lines: 10/10 (100.00%)
Total Gas: 1067
Total Hits: 58

Instruction Stats:
  DUP       | 252 gas | 14 hits |   18 avg gas |  23.62%
  GTINT     | 217 gas | 14 hits | 15.5 avg gas |  20.34%
  LESSINT   | 182 gas |  7 hits |   26 avg gas |  17.06%
  IFRETALT  | 182 gas |  7 hits |   26 avg gas |  17.06%
  DEC       | 138 gas | 12 hits | 11.5 avg gas |  12.93%
  PUSHCONT  |  52 gas |  2 hits |   26 avg gas |   4.87%
  WHILEBRK  |  26 gas |  1 hits |   26 avg gas |   2.44%
  PUSHINT_4 |  18 gas |  1 hits |   18 avg gas |   1.69%

Annotated Code:
 1 ✓ | PUSHINT_4 10                             | gas:18    | hits:1
 2 ✓ | PUSHCONT {                               | gas:26    | hits:1
 3 ✓ |     DUP                                  | gas:126   | hits:7
 4 ✓ |     GTINT 0                              | gas:217   | hits:14
 5   | }                                        |           |
 6 ✓ | PUSHCONT {                               | gas:26    | hits:1
 7 ✓ |     DUP                                  | gas:126   | hits:7
 8 ✓ |     LESSINT 5                            | gas:182   | hits:7
 9 ✓ |     IFRETALT                             | gas:182   | hits:7
10 ✓ |     DEC                                  | gas:138   | hits:12
11   | }                                        |           |
12 ✓ | WHILEBRK                                 | gas:26    | hits:1
13   |                                          |           |"
`;
